--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="gray80">#803E3C3C</color>
     <color name="yellow80">#FFE57F</color>
     <color name="yellow">#FFFF10</color>
+    <color name="red">#B53069</color>
 </resources>
