--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -50,9 +50,8 @@
         android:layout_above="@+id/btnSend"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="16dp"
         android:layout_marginBottom="16dp"
-        ></ListView>
+        android:divider="@android:color/transparent"
+        android:dividerHeight="16dp"></ListView>
 
 </RelativeLayout>
